# datahour-gen-ai-nlp-chaining

./: .flake8  Home.py  LICENSE.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post-creation.sh  post-start.sh
.github/workflows/: requirements.yml
.streamlit/: config.toml
assets/: examples.json
notebooks/: develop.ipynb
pages/: About.py
src/: logger.py  models.py  queries.py  utils.py
