[tool.poetry]
name = "datahour-gen-ai-nlp-chaining"
version = "0.1.0"
description = "This is a sample project for Data Hour webinar by Analytics Vidhya"
authors = ["Ian Yu <ian.yu@arc.com.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.27.2"
pandas = "2.0.0"
requests = "^2.31.0"
tenacity = "^8.2.3"
pydantic = "^2.4.2"
instructor = "^0.2.8"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.25.2"
python-dotenv = "^1.0.0"
flake8 = "^6.1.0"
black = "^23.10.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
